add build version for debug on mobile

--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@
             <div><span data-i18n="cycleLabel">Цикл</span>: <span id="cycleCount">0</span></div>
             <div><span data-i18n="durationLabel">Время</span>: <span id="duration">0:00</span></div>
         </div>
+        
+        <div class="version" id="version"></div>
     </div>
 
     <div id="settingsModal" class="modal">
