add mic indicator

--- a/index.html
+++ b/index.html
@@ -13,8 +13,9 @@
 </head>
 <body>
     <div class="container">
+        <span class="mic-indicator" id="micIndicator"></span>
         <button id="settingsBtn" class="btn-icon">⋮</button>
-        
+
         <div class="status" id="status" data-i18n="readyStatus">Начите сессию</div>
         
         <div class="controls">
