voice detection feedback

--- a/index.html
+++ b/index.html
@@ -85,6 +85,23 @@
             <label for="redemptionMs"><span data-i18n="redemptionMs">Макс. пауза в речи (мс)</span>:
                 <input type="number" id="redemptionMs" min="50" max="3000" step="50" value="300">
             </label>
+            <br>
+            <label for="feedbackType"><span data-i18n="feedbackType">Обратная связь при обнаружении голоса</span>:
+                <select id="feedbackType">
+                    <option value="none" data-i18n="feedbackNone">Нет</option>
+                    <option value="vibration" data-i18n="feedbackVibration">Вибрация</option>
+                    <option value="sound" data-i18n="feedbackSound">Звук</option>
+                </select>
+            </label>
+            <label for="feedbackFrequency"><span data-i18n="feedbackFrequency">Частота звука (Гц)</span>:
+                <input type="number" id="feedbackFrequency" min="200" max="2000" step="100" value="800">
+            </label>
+            <label for="feedbackVolume"><span data-i18n="feedbackVolume">Громкость звука</span>:
+                <input type="number" id="feedbackVolume" min="0.05" max="1" step="0.05" value="0.15">
+            </label>
+            <label for="feedbackDuration"><span data-i18n="feedbackDuration">Длительность звука (сек)</span>:
+                <input type="number" id="feedbackDuration" min="0.05" max="1" step="0.05" value="0.15">
+            </label>
             <button id="closeSettings" class="btn btn-primary btn-left" data-i18n="close">Закрыть</button>
         </div>
     </div>
