--- a/index.html
+++ b/index.html
@@ -63,11 +63,11 @@
             <label for="repeatTimeout"><span data-i18n="repeatTimeout">Интервал повтора команды (сек)</span>:
                 <input type="number" id="repeatTimeout" min="1" max="60" value="10">
             </label>
+            <label for="shuffleInterval"><span data-i18n="shuffleInterval">Интервал перемешивания команд контакта с телом (циклы)</span>:
+                <input type="number" id="shuffleInterval" min="1" max="100" value="3">
+            </label>
             <label for="inspectBodyInterval"><span data-i18n="inspectBodyInterval">Интервал команды Осмотри тело (циклы)</span>:
                 <input type="number" id="inspectBodyInterval" min="1" max="100" value="10">
-            </label>
-            <label for="shuffleInterval"><span data-i18n="shuffleInterval">Интервал перемешивания команд Почувствуй (циклы)</span>:
-                <input type="number" id="shuffleInterval" min="1" max="100" value="3">
             </label>
             <br>
             <label for="postVadDelayMs"><span data-i18n="postVadDelayMs">Пауза после обнаружения голоса (мс)</span>:
